--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 </head>
 <body>
     <h1>김동욱</h1>
-    <div>div 태그 영역</div>
+    <div style="background-Color: gold; width:250px; display:inline-block;">div 태그 영역 1 입니다</div>
+    <div style="background-Color: cyan; width: 250px; display:inline-block;">div 태그 영역 2 입니다</div>
+    <div style="background-Color: magenta; width: 250px; display:inline-block;">div 태그 영역 3 입니다</div>
     <h2>html 태그의 종류는 다음과 같습니다</h2>
+    <!--여기에 써지는 내용은 랜더링 되지 않습니다-->
     <ul>
         <li><br>br 태그는 줄 바꿈할 때 사용한다. </li>
         <li><blockquote cite="https://html03-dongwok.netlify.app/">blockquote 태그는 출처를 인용할 때 사용한다. </blockquote></li>
