--- a/index.html
+++ b/index.html
@@ -34,5 +34,11 @@
         <li><label for="userpw">라벨 태그는form 태그안에 사용하는 상호작용 요소에 이름을 붙일 때 사용합니다.</label>
         <input type="text" id="userpw"></li>
     </ul>
+    <p>p 태그로 작성된 영역. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;중요한 부분은 <b>굵게</b>  <i>기울리게</i> 강조할 수 있다.
+        줄 바꿈은 마음대로 잘 되지 않습니다. 
+        <br> 줄바꿈 태그를 사용해야지만 됩니다.
+        밑줄은 <u>밑 태그 (u)를 사용할수 있습니다</u>
+    </p>
+    <blockquote cite="https://ko.wikipedia.org/wiki/HTML"><p>하이퍼 텍스트 마크업 언어(영어: Hyper Text Markup Language, HTML, 문화어: 초본문표식달기언어, 하이퍼본문표식달기언어)는 웹 페이지 표시를 위해 개발된 지배적인 마크업 언어다. 또한, HTML은 제목, 단락, 목록 등과 같은 본문을 위한 구조적 의미를 나타내는 것뿐만 아니라 링크, 인용과 그 밖의 항목으로 구조적 문서를 만들 수 있는 방법을 제공한다. 그리고 이미지와 객체를 내장하여 대화형 양식을 생성하는 데 사용될 수 있다. HTML은 웹 페이지 콘텐츠 안의 꺾쇠 괄호에 둘러싸인 "태그"로 되어있는 HTML 요소 형태로 작성한다. HTML은 웹 브라우저와 같은 HTML 처리 장치의 행동에 영향을 주는 자바스크립트, 본문과 그 밖의 항목의 외관과 배치를 정의하는 CSS 같은 스크립트를 포함하거나 불러올 수 있다. HTML과 CSS 표준의 공동 책임자인 W3C는 명확하고 표상적인 마크업을 위하여 CSS의 사용을 권장한다.[1]</p></blockquote>
 </body>
 </html>
